@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<AppInfo>
+  <Summary>Shows the time and lets you set memos and alarms</Summary>
+  <About>
+    <Purpose>Alarm clock</Purpose>
+    <Version>0.1.1 (29-May-2001)</Version>
+    <Author>Thomas Leonard</Author>
+    <License>GNU General Public License</License>
+    <Homepage>http://rox.sourceforge.net</Homepage>
+  </About>
+</AppInfo>
