@@ -2,6 +2,10 @@
 			Reminds you about things
 			by Thomas Leonard
 
+29-May-2001 (29-May-2001)
+~~~~~~~~~~~
+Added AppInfo file.
+
 19-Jan-2001
 ~~~~~~~~~~~
 Main window widgets don't grab the focus (looks better).
